Refactor
- introduce text tokenizer and ngram model builder
- add predict next tokens method to ngram model